input - correct namespace handling, and a Run-button.

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.clojure:clojure:1.8.0-RC3'
+    compile 'org.clojure:clojure:1.8.0'
     compile 'jline:jline:0.9.94'
     compile 'org.fxmisc.richtext:richtextfx:0.6.10'
     compile 'org.clojure:tools.reader:1.0.0-alpha1'
